to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

ctests-V10-00-30 -- 05 November 2014 Mathieu Karamitros
- update command line options of pdb4dna

ctests-V10-00-29 -- 30 October 2014 Michael Kelsey
- retag because of incorrect CDash rejection.  No changes.

ctests-V10-00-28 -- 28 October 2014 Mathieu Karamitros
- remove incorrect environment for pdb4dna & wholeNuclearDNA

ctests-V10-00-27 -- 26 October 2014 Mathieu Karamitros
- fix paths for wholeNuclearDNA & pdb4dna in GNUMakeTestfile.cmake

ctests-V10-00-26 -- 25 October 2014 Mathieu Karamitros
- Correct execution command of pdb4dna

ctests-V10-00-25 -- 24 October 2014 Mathieu Karamitros
- add command line options to chem1,2,3

ctests-V10-00-24 -- 24 October 2014 Mathieu Karamitros
- add pdb4dna + wholeNuclearDNA for testing

ctests-V10-00-23 -- 23 October 2014 Mathieu Karamitros
- Add extended/dnaphysics for testing

ctests-V10-00-22 -- 23 October 2014 Mathieu Karamitros
- Add extended/microdosimetry to tests

ctests-V10-00-21 -- 23 October 2014 Mathieu Karamitros
- Correct path in GNUMakeTestfile.cmake

ctests-V10-00-20 -- 22 October 2014 Mathieu Karamitros
- Correct a typo in CMakeLists.txt

ctests-V10-00-19 -- 20 October 2014 Mathieu Karamitros
- Add chem1, chem2, chem3

ctests-V10-00-18 13 October 2014 Luciano Pandola
- Removed AIDA dependency for example-adv-composite_calorimeter-build

ctests-V10-00-17 10 October 2014 Andrea Dotti
- Adding exGPS test for PhysicsChecks

ctests-V10-00-16 07 Oct 2014 Luciano Pandola
- Restore testing of ChargeExchangeMC and CompositeCalorimeter, 
protected to make sure that AIDA and gdml are found.
